<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center" >

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/card_height"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/card_margins" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:background="#EF6C00"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:id="@+id/imgAssessTreatment"
                            android:src="@drawable/medical_symptoms"
                            android:background="@color/colorBackground"
                            android:contentDescription="@string/asses_treatment_text"
                            android:padding="@dimen/card_image_padding" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_margin="@dimen/card_text_margin"
                            android:gravity="center"
                            android:textColor="@color/colorTextMain"
                            android:textStyle="bold"
                            android:text="@string/asses_treatment_text"
                            android:textSize="@dimen/text_size_min"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/card_height"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/card_margins" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:background="#FB8C00"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:id="@+id/imgTreatChild"
                            android:src="@drawable/treatment_syringe"
                            android:background="@color/colorBackground"
                            android:contentDescription="@string/treat_child_text"
                            android:padding="@dimen/card_image_padding" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_margin="@dimen/card_image_padding"
                            android:gravity="center"
                            android:text="@string/treat_child_text"
                            android:textColor="@color/colorTextMain"
                            android:textStyle="bold"
                            android:textSize="@dimen/text_size_min" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center" >

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/card_height"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/card_margins" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:background="#01579B"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:id="@+id/imgCounselMother"
                            android:src="@drawable/medical_symptoms"
                            android:background="@color/colorBackground"
                            android:contentDescription="@string/counsel_mother_text"
                            android:padding="@dimen/card_image_padding" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_margin="@dimen/card_image_padding"
                            android:gravity="center"
                            android:text="@string/counsel_mother_text"
                            android:textColor="@color/colorTextMain"
                            android:textStyle="bold"
                            android:textSize="@dimen/text_size_min" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/card_height"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/card_margins" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:background="#FFC107"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:id="@+id/imgFollowUpCare"
                            android:src="@drawable/treatment_syringe"
                            android:background="@color/colorBackground"
                            android:contentDescription="@string/follow_up_care_text"
                            android:padding="@dimen/card_image_padding" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_margin="@dimen/card_image_padding"
                            android:gravity="center"
                            android:text="@string/follow_up_care_text"
                            android:textColor="@color/colorTextMain"
                            android:textStyle="bold"
                            android:textSize="@dimen/text_size_min" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center" >

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/card_height"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/card_margins" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:background="#FF6F00"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:id="@+id/imgHIVCare"
                            android:src="@drawable/medical_symptoms"
                            android:background="@color/colorBackground"
                            android:contentDescription="@string/hiv_care_text"
                            android:padding="@dimen/card_image_padding" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_margin="@dimen/card_image_padding"
                            android:gravity="center"
                            android:text="@string/hiv_care_text"
                            android:textColor="@color/colorTextMain"
                            android:textStyle="bold"
                            android:textSize="@dimen/text_size_min" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/card_height"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/card_margins" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:background="#039BE5"
                        android:gravity="center|start">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:id="@+id/imgGallery"
                            android:src="@drawable/treatment_syringe"
                            android:background="@color/colorBackground"
                            android:contentDescription="@string/gallery_text"
                            android:padding="@dimen/card_image_padding" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_margin="@dimen/card_image_padding"
                            android:gravity="center"
                            android:text="@string/gallery_text"
                            android:textColor="@color/colorTextMain"
                            android:textStyle="bold"
                            android:textSize="@dimen/text_size_min" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.NavigationView
        app:headerLayout="@layout/drawer_header"
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:itemTextColor="#000000"
        app:itemIconTint="#892c2c"
        app:menu="@menu/menu"
        android:layout_gravity="start" />

</android.support.v4.widget.DrawerLayout>